--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ settings.py
 .project
 .pydevproject
 .settings
+**/node_modules/
+yarn.lock
+package-lock.json
 
 __pycache__/
 *.py[cod]
@@ -28,6 +31,8 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
+bin/
+pyvenv.cfg
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
